--- a/eva-forum/src/pages/home/Home.module.css
+++ b/eva-forum/src/pages/home/Home.module.css
@@ -102,11 +102,12 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  border: solid, gray;
+  /* background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); */
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
+  color: gray;
   font-weight: bold;
   font-size: 24px;
   margin-right: 50px;
