--- a/eva-forum/src/pages/questionDetail/QuestionDetail.module.css
+++ b/eva-forum/src/pages/questionDetail/QuestionDetail.module.css
@@ -112,7 +112,8 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background: lightgrey;
+  /* background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); */
   display: flex;
   align-items: center;
   justify-content: center;
