landing page final update

--- a/frontend/src/pages/Landing/Landing.module.css
+++ b/frontend/src/pages/Landing/Landing.module.css
@@ -70,6 +70,10 @@
   outline: none;
   background: #fff;
 }
+input:focus {
+  outline: 2px solid #f78502;
+  border-color: #f78502;
+}
 
 .row {
   display: flex;
