--- a/frontend/Index.css
+++ b/frontend/Index.css
@@ -6,10 +6,13 @@
 body {
   margin: 0;
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
-  background: url("./src/assets/EV-background.png") no-repeat center center
-    fixed;
+  background-image: url("https://evangadi-forum.netlify.app/static/media/bg-svg-f.192609b8540a56a36a47cf339386fe08.svg"); /* Replace with your URL */
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh; /* Full viewport height */
 }
+
 
 .main-content {
   flex: 1;
